2000-12-26  Mo DeJong  <mdejong@redhat.com>

	* src/incrmnt.cpp (Control::IncrementalRecompilation):
	Use char instead of u1 as the argument passed to
	the cin.get() method.

2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* src/m4/ac_cxx_check_set_new_handler.m4:
	* src/m4/ac_cxx_namespaces.m4: Use
	HAVE_NAMESPACES not HAVE_NAMESPACE.

2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* Makefile.am: Add RPM spec file to
	`make dist` target.
	* TODO: Mark TODO items fixed.
	* src/Makefile.am: Add java.g
	file to `make dist` target. Fix
	up efence target.

2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* HACKING: Add new file that gives
	users a bit more hacking info.
	* INSTALL: Fix problems with CXXFLAGS
	and more autotools notes to HACKING.
	* README: Touch up minor errors,
	mention the HACKING file.
	* TODO: Update the TODO list with
	a number of issues TDB in 1.13.

2000-12-19  Mo DeJong  <mdejong@redhat.com>

	* autogen.sh: Pass the --ignore-deps
	flag to automake. We don't want to
	use depcomp, it breaks in too many
	places.
	* config.guess:
	* config.sub: Update guess and sub
	platform detection files.
	* configure.in:
	* jikes.spec: Set version to 1.13.
	* src/depcomp: Remove depcomp, now
	that we pass --ignore-deps to automake,
	it is no longer needed.

2000-12-03  Mo DeJong  <mdejong@redhat.com>

	* src/stream.cpp (ProcessInputUnicode): Use
	correct form of delete for an array variable.

2000-12-03  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (compile): Revert
	change that allocated a Control object
	on the stack.

2000-12-03  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (parseOptions): Revert
	the change that allocated an ArgumentExpander
	on the stack. Moving the object onto the
	stack masked test suite failures, causing
	them to pass even though memory was getting
	corrupted. From now on, we should never
	allocate an object on the stack.

2000-11-29  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.h: Re-order instance declaration